k8s/pki-client-deployment.yaml
# DEployment is not needed as we are using Job to run the client once and exit
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-mtls-client
  namespace: default
  labels:
    app: go-mtls-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-mtls-client
  template:
    metadata:
      labels:
        app: go-mtls-client
    spec:
      containers:
        - name: go-mtls-client
          image: sirajudheenam/go-mtls-client:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: client-certs
              mountPath: /app/certs/client
              readOnly: true
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
      volumes:
        - name: client-certs
          secret:
            secretName: go-mtls-client-certs
      restartPolicy: Always
