k8s/pki-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-mtls-server
  namespace: default
  labels:
    app: go-mtls-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-mtls-server
  template:
    metadata:
      labels:
        app: go-mtls-server
    spec:
      containers:
        - name: go-mtls-server
          image: sirajudheenam/go-mtls-server:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8443
          volumeMounts:
            - name: server-certs
              mountPath: /app/certs/server
              readOnly: true
            - name: logs
              mountPath: /app/logs
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
      volumes:
        - name: server-certs
          secret:
            secretName: go-mtls-server-certs
        - name: logs
          emptyDir: {}
