k8s/pki-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-mtls-server-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: go-mtls-server
  ports:
    - port: 8443
      targetPort: 8443
      nodePort: 30443
