k8s/pki-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-mtls-server-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
    - host: go-mtls-server.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-mtls-server-service
                port:
                  number: 8443
